{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 309,
  "lineage": "a3837c29-c028-1494-9748-15588a001c8d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-063f8e8e151ad9169",
            "domain": "vpc",
            "id": "eipalloc-0372fd1e705ee39d8",
            "instance": "i-064e8e1bc7d6215da",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0f177e5870114da41",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-35-85-80-215.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.80.215",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.s3profile",
            "aws_iam_role.s3bucketrole",
            "aws_instance.nginx1",
            "aws_network_interface.inteface",
            "aws_security_group.sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.2.50",
            "association_id": "eipassoc-0e2bbaa6e80bd57c7",
            "domain": "vpc",
            "id": "eipalloc-062521af98e44a192",
            "instance": "i-054dead9a7f96176a",
            "network_border_group": "us-west-2",
            "network_interface": "eni-03762fb1d6f3a6f54",
            "private_dns": "ip-10-0-2-50.us-west-2.compute.internal",
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-52-10-202-179.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.202.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.s3profile",
            "aws_iam_role.s3bucketrole",
            "aws_instance.nginx2",
            "aws_network_interface.inteface2",
            "aws_security_group.sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:669477476485:loadbalancer/balancer",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 600,
            "cross_zone_load_balancing": true,
            "dns_name": "balancer-1282659248.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "balancer",
            "idle_timeout": 600,
            "instances": [
              "i-054dead9a7f96176a",
              "i-064e8e1bc7d6215da"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "balancer",
            "security_groups": [
              "sg-0480d5eee35241f68"
            ],
            "source_security_group": "669477476485/sshhttpgroup",
            "source_security_group_id": "sg-0480d5eee35241f68",
            "subnets": [
              "subnet-00d96ee745adc0105",
              "subnet-0d72525cafd5e8994"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_instance.nginx1",
            "aws_instance.nginx2",
            "aws_security_group.sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2d06d50ce30b442",
            "arn": "arn:aws:ec2:us-west-2:669477476485:instance/i-064e8e1bc7d6215da",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3profile",
            "id": "i-064e8e1bc7d6215da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mermaid",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f177e5870114da41"
              }
            ],
            "primary_network_interface_id": "eni-0f177e5870114da41",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-35-85-80-215.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.80.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aff7e7eb723a8e2b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d72525cafd5e8994",
            "tags": {
              "Name": "Nginx1"
            },
            "tags_all": {
              "Name": "Nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0480d5eee35241f68"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3profile",
            "aws_iam_role.s3bucketrole",
            "aws_network_interface.inteface",
            "aws_security_group.sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2d06d50ce30b442",
            "arn": "arn:aws:ec2:us-west-2:669477476485:instance/i-054dead9a7f96176a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3profile",
            "id": "i-054dead9a7f96176a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mermaid",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-03762fb1d6f3a6f54"
              }
            ],
            "primary_network_interface_id": "eni-03762fb1d6f3a6f54",
            "private_dns": "ip-10-0-2-50.us-west-2.compute.internal",
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-52-10-202-179.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.202.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040f6fb4b321a9f17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d96ee745adc0105",
            "tags": {
              "Name": "Nginx2"
            },
            "tags_all": {
              "Name": "Nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0480d5eee35241f68"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3profile",
            "aws_iam_role.s3bucketrole",
            "aws_network_interface.inteface2",
            "aws_security_group.sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669477476485:internet-gateway/igw-0b8f4b41c406e6c14",
            "id": "igw-0b8f4b41c406e6c14",
            "owner_id": "669477476485",
            "vpc_id": "vpc-0d883b2208f65e91f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "inteface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0f4fac1fc1cb97ed9",
                "device_index": 0,
                "instance": "i-064e8e1bc7d6215da"
              }
            ],
            "id": "eni-0f177e5870114da41",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:78:18:9e:ef:8d",
            "private_dns_name": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0480d5eee35241f68"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d72525cafd5e8994"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "inteface2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0bb0c373528270180",
                "device_index": 0,
                "instance": "i-054dead9a7f96176a"
              }
            ],
            "id": "eni-03762fb1d6f3a6f54",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:39:62:58:c9:1b",
            "private_dns_name": "ip-10-0-2-50.us-west-2.compute.internal",
            "private_ip": "10.0.2.50",
            "private_ips": [
              "10.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0480d5eee35241f68"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d96ee745adc0105"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669477476485:route-table/rtb-022da55906b8dd1f3",
            "id": "rtb-022da55906b8dd1f3",
            "owner_id": "669477476485",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8f4b41c406e6c14",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0d883b2208f65e91f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b008c60fec329b61",
            "route_table_id": "rtb-022da55906b8dd1f3",
            "subnet_id": "subnet-0d72525cafd5e8994"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtable",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000da36d3b73975b",
            "route_table_id": "rtb-022da55906b8dd1f3",
            "subnet_id": "subnet-00d96ee745adc0105"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtable",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669477476485:security-group/sg-0480d5eee35241f68",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0480d5eee35241f68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sshhttpgroup",
            "name_prefix": "",
            "owner_id": "669477476485",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d883b2208f65e91f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669477476485:subnet/subnet-0d72525cafd5e8994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d72525cafd5e8994",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669477476485",
            "vpc_id": "vpc-0d883b2208f65e91f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669477476485:subnet/subnet-00d96ee745adc0105",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00d96ee745adc0105",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669477476485",
            "vpc_id": "vpc-0d883b2208f65e91f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669477476485:vpc/vpc-0d883b2208f65e91f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a012407e030146ea",
            "default_route_table_id": "rtb-0dcf494acb2cb2772",
            "default_security_group_id": "sg-0f5de47c6dd3ba486",
            "dhcp_options_id": "dopt-b18d8fc9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d883b2208f65e91f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dcf494acb2cb2772",
            "owner_id": "669477476485"
          }
        }
      ]
    }
  ]
}